feat: :sparkles: add delete route
